changed button to display message and utilize my getMessageUsingAsyncAwait() function

--- a/walkthroughs/week-2-server/examples/random-quotes/src/main/webapp/index.html
+++ b/walkthroughs/week-2-server/examples/random-quotes/src/main/webapp/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="content">
-      <h1>Random Quotes</h1>
-      <p>Click here to see a random quote:</p>
-      <button onclick="getRandomQuote()">Fetch a quote!</button>
-      <div id="quote-container"></div>
+      <h1>My Message</h1>
+      <p>Click here to see a message:</p>
+      <button onclick="getMessageUsingAsyncAwait()">Fetch a message!</button>
+      <div id="message-container"></div>
     </div>
   </body>
 </html>
