changed png file name

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -12,16 +12,16 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="aboutMe.html">About Me</a>
-        <a href="#">Projects</a>
-        <a href="#">Resume</a>
-        <a href="#">Contact</a>
+        <a href="projects.html">Projects</a>
+        <a href="resume.html">Resume</a>
+        <a href="contact.html">Contact</a>
     </div>
 
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>  
     
     <div id="content">
       <h1>Hey, hello!</h1><p>
-      <img src="images/Untitled_Artwork.png" width="700" height="525"/><p>
+      <img src="images/eyesGIF.png" width="700" height="525"/><p>
       <h2>Welcome to Micayla's Portfolio</h2>
     </div>
   </body>
