use fetch() to request content from DataServlet.java and adds it to the page when user pushes button to get message

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -23,6 +23,9 @@
       <h1>Hey, hello!</h1><p>
       <img src="images/eyesGIF.png" width="700" height="525"/><p>
       <h2>Welcome to Micayla's Portfolio</h2>
+
+      <button onclick="getMessage()">Fetch a message!</button>
+      <div id="message-container"></div>
     </div>
   </body>
 </html>
