edited DataServlet.java so my strings weren't local variables, cleaned comment formatting; redid script.java with the formatting provided in the example on the tutorial to get it compiling correctly

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
+ <body>
 
 
     <div id="mySidenav" class="sidenav">
@@ -24,8 +25,8 @@
       <img src="images/eyesGIF.png" width="700" height="525"/><p>
       <h2>Welcome to Micayla's Portfolio</h2>
 
-      <button onclick="getMessage()">Fetch a message!</button>
-      <div id="message-container"></div>
+      <button onclick="getMessageJSON()">Fetch a message!</button>
+
     </div>
   </body>
 </html>
