--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -22,6 +22,7 @@
         <h5>Leave a comment below!</h5>
         <p>Please respond with any feedback or questions you may have for me.</p>
         <div onload "getCommentJSON()"></div>
+        <ul id="Comments"></ul>
         <form action="/data" method="POST">
             <p>Comments:</p>
             <textarea name="text-input"></textarea>
@@ -29,7 +30,6 @@
             <input type="submit"></input>
         </form>
         <br><br>
-        <ul id="data-container"></ul>
     </div>
 
   </body>
