--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
- <body>
+ <body onload="loadComments()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
@@ -20,16 +20,15 @@
 
     <div>
         <h5>Leave a comment below!</h5>
-        <p>Please respond with any feedback or questions you may have for me.</p>
-        <div onload "getCommentJSON()"></div>
-        <ul id="Comments"></ul>
+        <div></div>
         <form action="/data" method="POST">
-            <p>Comments:</p>
-            <textarea name="text-input"></textarea>
+            <p>Enter your comment:</p>
+            <textarea name="comment-container"></textarea>
             <br><br>
             <input type="submit"></input>
         </form>
-        <br><br>
+        <div id="comment-results"></div>
+        <p id="comment-container"></p>
     </div>
 
   </body>
