created function to draw a chart and added chart to resume page to describe my skill level with various languages

--- a/portfolio/src/main/webapp/resume.html
+++ b/portfolio/src/main/webapp/resume.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>My Portfolio</title>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
@@ -25,25 +26,27 @@
         <div class="columnRes">
             <h5>Contact</h5>
             <p class=contactInfoRes>(408) 921-8182<br>mmendoza28@fordham.edu<br>16536 Englewood Ave. Los Gatos, CA 95032</p>
-            <br><br>
 
-            <h6>Education</h6>
-            <p class=college>Fordham University - Bronx, NY May 2022</p>
             <br>
+            <h5>Education</h5>
+            <p class=college>Fordham University - Bronx, NY May 2022</p>
             <ul class=collegeDegrees>
                 <li>B.A. New Media and Digital Design</li>
                 <li>Minor in Computer Science</li>
-            <br><br>
+            </ul>
 
-            <h7>Skills</h8>
+            <br>
+            <h5>Skills</h5>
             <ul class=skills>
                 <li>C++</li>
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>Javascript</li>
-                <li>UX Design &
+                <li>UX Design & Research</li>
+            </ul>
 
-            <h8>Coursework</h8>
+            <br>
+            <h5>Coursework</h5>
             <ul class=courseWork>
                 <li>Computer Science I & II</li>
                 <li>Discrete Structures I & II</li>
@@ -51,10 +54,10 @@
                 <li>User Experience Design</li>
                 <li>Digital Production for New Media</li>
             </ul>
-            <br><br>
 
-            <h9>Activites & Honors</h9>
-            <p class=
+            <br>
+            <h5>Activites & Honors</h5>
+            <p class=activitiesAndHonors>
 
         </div>
       </div>
@@ -62,3 +65,11 @@
         <div>
             
         </div>
+
+        <h1>Skills:</h1>
+        <div id="chart-container"></div>
+
+
+
+    </body>
+</html>
